--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write --cache ."
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
@@ -16,6 +17,7 @@
     "@react-three/fiber": "^8.15.14",
     "expo": "^50.0.2",
     "expo-gl": "~13.6.0",
+    "r3f-native-orbitcontrols": "^1.0.9",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "^4.8.2",
@@ -32,6 +34,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/three": "^0.160.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
