--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.3.0",
     "three": "^0.160.1"
   },
   "devDependencies": {
