--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "format": "prettier --write --cache ."
+    "format": "prettier --write --cache .",
+    "clean-gradlew": "cd android && ./gradlew clean && cd ..",
+    "clean-run-android": "cd android && ./gradlew clean && yarn android",
+    "find-port": "netstat -ano | findstr :8081",
+    "killPID": "taskkill /F /PID"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.14",
     "expo": "^50.0.2",
+    "expo-blur": "~12.9.2",
     "expo-gl": "~13.6.0",
     "r3f-native-orbitcontrols": "^1.0.9",
     "react": "18.2.0",
@@ -40,6 +46,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
