--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "Carea",
-    "Elozino",
-    "gradlew",
-    "Ovedhe",
-    "Topbar"
-  ]
+  "cSpell.words": ["Carea", "Elozino", "gradlew", "Ovedhe", "Topbar"]
 }
