--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["Carea", "Elozino", "gradlew", "Ovedhe", "Topbar"]
+  "cSpell.words": [
+    "Carea",
+    "Elozino",
+    "findstr",
+    "gradlew",
+    "Ovedhe",
+    "taskkill",
+    "Topbar"
+  ]
 }
